<resources>
    <string name="app_name">Kotlin - Prueba - Superhéroes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intelligence">Intelligence: %1$s</string>
    <string name="strength">Strength: %1$s</string>
    <string name="speed">Speed: %1$s</string>
    <string name="durability">Durability: %1$s</string>
    <string name="power">Power: %1$s</string>
    <string name="combat_1_s">Combat: %1$s</string>
</resources>